# game-engine

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLFW.cmake
shaders/: debug_font.frag  default.frag  default.vert
src/: default.vert  main.c
src/engine/: memory.c  memory.h
src/engine/core/filesystem/: filesystem.c
src/engine/core/input/: input.c  input.h
src/engine/core/logger/: logger.c  logger.h
src/engine/core/memory/: memory.c
src/engine/core/transform/: transform.c  transform.h
src/engine/core/window/: window.c  window.h
src/engine/debug/: debug_font.c  debug_font.h
src/engine/io/: io.c  io.h
src/engine/physics/: rigid_body.h
src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/engine/renderer/: render.c  render.h  texture.c  texture.h
